2007-05-09  Philip Van Hoof  <pvanhoof@gnome.org>

	* libtinymailui-gtk/tny-gtk-header-list-model.c: Moved the private API
	to a private type

	* This was a minor API change

2007-05-09  Jose Dapena Paz  <jdapena@igalia.com>

	* configure.ac, Makefile.am:
	Now Maemo target also compiles gnomevfs module.
	* debian/control.maemo:
	Added package for gnomevfs module

2007-05-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-queues/libtinymail-queues.pc.in: Fixed the name of the
	library in the -l option
	* Some ChangeLog fixes

2007-05-08  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* libtinymail/tny-merge-folder.c: Add cancelled parameter to 
	transfer_msgs_async function.
	* libtinymail/tny-shared.h: Change TransferMsgsAsync callback 
	API function.
	* libtinymail/tny-shared.h: Add a new status code for 
	transfer_msgs_async function.
	* ibtinymail-camel/tny-camel-folder.c : Implementation of 
	status_callbacks calls in transfer_msgs_async function.

2007-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* -Wall warnings fixed
	* Speedups in TnyGtkHeaderListModel

2007-05-08  Murray Cumming  <murrayc@murrayc.com>

	* docs/devel/reference/tmpl/tny-shared.sgml:
	TnyGetPassFunc:
	* libtinymail/tny-password-getter.c: 
	tny_password_getter_get_password():
	* camel/camel-session.c:
	camel_session_get_password():
	Document the prompt parameter as best ignored, because there is nothing 
	sensible that a real-world application can do with it.

2007-05-08  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* make _finalize in tny-maemo-conic-device also do the dummy
	        disconnect, so we don't crash-on-exit in scratchbox

2007-05-08  Murray Cumming  <murrayc@murrayc.com

	* libtinymail/tny-account-store.c:
	* libtinymail/tny-account-store.h: Change the alert_func vfunc to 
	provide a GError instead of a human-readable error string.
	(tny_account_store_alert): The documentation for this vfunc invoker seems to 