@@ -44,6 +44,7 @@ enum _TnyStatusCode
 	TNY_FOLDER_STATUS_CODE_GET_MSG = 2,
 	TNY_GET_MSG_QUEUE_STATUS_GET_MSG = 3,
 	TNY_FOLDER_STATUS_CODE_XFER_MSGS = 4,
+	TNY_FOLDER_STATUS_CODE_COPY_FOLDER = 5,
 };
 
 struct _TnyStatus 
